# ProyectoPrograI

./: Administrativo.h  CMakeLists.txt  Curso.cpp  Curso.h  Estudiante.cpp  Estudiante.h  Horario.cpp  Horario.h  ListaCursos.cpp  ListaCursos.h  ListaEstudiantes.cpp  ListaEstudiantes.h  ListaProfesores.cpp  ListaProfesores.h  NodoCurso.h  NodoEstudiante.h  NodoProfesor.h  Persona.cpp  Persona.h  Profesor.cpp  Profesor.h  SistemaUniversidad.cpp  SistemaUniversidad.h  main.cpp  pruebas.txt
